Fix issue get Throwable message [2]